--- a/news-front-end-react/src/style.css
+++ b/news-front-end-react/src/style.css
@@ -1,3 +1,12 @@
 ul {
   list-style-type: none;
 }
+
+.title-container {
+  display: flex;
+  align-items: baseline;
+}
+
+.click-title {
+  margin-left: 1vw;
+}
