added modal for new post

--- a/news-front-end-react/src/style.css
+++ b/news-front-end-react/src/style.css
@@ -6,3 +6,18 @@ ul {
   display: flex;
   align-items: baseline;
 }
+
+#new-post-modal {
+  background: lightgray;
+  margin: 10vh auto auto 30vw;
+  width: 40%;
+  height: 40%;
+  padding: 10px;
+  border: 2px solid gray;
+}
+
+#add {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
