--- a/news-front-end-react/src/style.css
+++ b/news-front-end-react/src/style.css
@@ -8,10 +8,10 @@ ul {
 }
 
 #new-post-modal {
-  background: lightgray;
+  background: whitesmoke;
   margin: 10vh auto auto 30vw;
   width: 40%;
-  height: 40%;
+  height: 50%;
   padding: 10px;
   border: 2px solid gray;
 }
