--- a/news-front-end-react/src/style.css
+++ b/news-front-end-react/src/style.css
@@ -1,3 +1,17 @@
+#main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#new-post {
+  margin: 20px auto;
+}
+
+#page-title {
+  font-size: 10vh;
+}
+
 ul {
   list-style-type: none;
 }
@@ -15,4 +29,28 @@ ul {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+#posts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+li {
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2vh auto;
+  border: 1px solid gray;
+  padding: 5px;
+}
+
+.article-img {
+  width: 60vw;
+}
+
+input[type="text"] {
+  width: 100%;
 }
