--- a/news-front-end-react/src/style.css
+++ b/news-front-end-react/src/style.css
@@ -16,7 +16,7 @@ ul {
   list-style-type: none;
 }
 
-#new-post-modal {
+.modal {
   background: whitesmoke;
   margin: 10vh auto auto 30vw;
   width: 40%;
@@ -25,7 +25,7 @@ ul {
   border: 2px solid gray;
 }
 
-#add {
+.add {
   display: flex;
   flex-direction: column;
   align-items: center;
