--- a/news-front-end-react/src/style.css
+++ b/news-front-end-react/src/style.css
@@ -1,7 +1,23 @@
+#page-title {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
 #main-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+#user-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#user-session-btns button{
+  margin: 0 10px 0 10px;
+  width: 130px;
 }
 
 #new-post {
