--- a/news-front-end-react/src/style.css
+++ b/news-front-end-react/src/style.css
@@ -45,8 +45,10 @@ ul {
 .modal {
   background: whitesmoke;
   margin: 10vh auto auto 30vw;
-  width: 40%;
-  height: 50%;
+  min-width: 40%;
+  min-height: 40%;
+  width: auto;
+  height: auto;
   padding: 10px;
   border: 2px solid gray;
 }
@@ -84,4 +86,36 @@ input[type="text"] {
 .navbar {
   display: flex;
   justify-content: center;
+}
+
+.submit-delete-btns {
+  display: flex;
+  justify-content: center;
+}
+
+.submit-delete-btns button{
+  margin: 10px;
+}
+
+.submit-delete-btns input{
+  margin: 10px;
+}
+
+.post-title {
+  margin: 15px;
+}
+
+.post-details {
+  margin: 10px;
+}
+
+#add-post {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#post-submit {
+  margin: 10px;
+  align-self: center;
 }
